[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.40.0", features = ["affix", "basic-auth", "cache"] }
tokio = "1.28.0"
tracing = "0.1"
tracing-subscriber = "0.3"

